2005-05-31  Timothy Brownawell  <tbrownaw@gmail.com>

	Remove old collection support in favor of using regexes exclusively.
	* netsync.cc (convert_pattern): Remove function.
	* (14 files): collections are unexist; do not mention (potential
	for confusion)
	* constants.cc: Increase netsync protocol version.
	* monotone.texi: Update documentation.
	* tests/t_epoch_unidirectional.at: Fix to sync subbranches.
	* commands.cc (CMD update): Fix usage check.
	* tests/t_select_cert.at: Fix to use --revision.

2005-05-30  Timothy Brownawell  <tbrownaw@gmail.com>

	* netsync.cc: Call note_netsync_*_received hooks in the order they're
	written to the db (for revisions, gives topological order).

2005-05-30  Timothy Brownawell  <tbrownaw@gmail.com>

	* lua.{cc,hh}: Replace note_netsync_commit with
	note_netsync_{revision,cert,pubkey}_received
	* packet.{cc,hh}: Callbacks for cert or key written to the database.
	* netsync.cc: Use said callbacks, call note_netsync_*_received hooks.
	* monotone.texi: Update documentation.

2005-05-30  Timothy Brownawell  <tbrownaw@gmail.com>

	* packet.{cc,hh}, netsync.cc: on_revision_written callback now takes
	the revision_id as an argument.
	* lua.{cc,hh}: New Lua hook, note_netsync_commit.
	* netsync.cc: At end of netsync session, call new hook for each
	revision received.
	monotone.texi: Document new hook.

2005-05-30  Richard Levitte  <richard@levitte.org>

	* commands.cc (CMD(checkout), CMD(cdiff), CMD(diff), CMD(log)):
	Remove '[--revision=REVISION]' from command argument synopsis,
	and add more text to the help to explain what happens when
	--revision options are used.
	(CMD(update)): Instead of the optional revision argument, use
	the --revision option.  Add information on what happens when the
	--revision option is used, and when it's not.

	* tests/t_add_stomp_file.at, tests/t_add_vs_commit.at,
	tests/t_annotate.at, tests/t_lf_crlf.at,
	tests/t_update_nonexistent.at, tests/t_update_off_branch.at,